# drf-text-store

./: README.md  docker-compose.yml  pyproject.toml
example_project/: Dockerfile  requirements.txt
example_project/api/: urls.py
example_project/example_project/: settings.py  urls.py
tests/: conftest.py  docker-compose.test.yml  pytest_requirements.txt  test_env
tests/text_store/: test_indexing.py
text_store/: apps.py  filters.py  models.py  parsers.py  serializers.py  settings.py  signals.py  tasks.py  views.py
text_store/migrations/: 0001_initial.py
text_store/urls/: api.py  public.py
